--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html, body {
+  align-items: center;
+  background-color: #fafafa;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +19,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+}
+
+.links .divider {
+  background-color: lightgray;
+  margin: 0 16px;
+  width: 1px;
 }
