chore: add stencil vs plain web component demo

--- a/src/declarative-vs-imperative-demo/DeclarativeVsImperativeDemo.css
+++ b/src/declarative-vs-imperative-demo/DeclarativeVsImperativeDemo.css
@@ -1,5 +1,5 @@
 .declarative-vs-imperative-demo {
-  background-color: #fafafa;
+  background-color: #fff;
   border: 1px solid lightgray;
   border-radius: 3px;
   padding: 64px;
