--- a/src/synthetic-event-demo/SyntheticEventDemo.css
+++ b/src/synthetic-event-demo/SyntheticEventDemo.css
@@ -1,5 +1,5 @@
 .synthetic-event-demo {
-  background-color: #fafafa;
+  background-color: #fff;
   border: 1px solid lightgray;
   border-radius: 3px;
   padding: 64px;
